# book_highlighter

./: .gitignore  README.md  pyproject.toml
bookhighlighter/: 2.9  __init__.py  functions.py  main.py
data/: .gitignore
demo/: README.md  cmdline.txt
output/: .gitignore
tests/: old_tests.py  test_functions.py
